# stat-can-rs

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  REMOTE_MCP_SERVER_GUIDE.md  UNIVERSAL_CKAN_STRATEGY.md  USER_GUIDE.md  brenchmark  brenchmark.rs  clippy_output.txt  demo_agent.py  insert_impl.py  modify_mcp_server.py  modify_sse.py  my_script.py  output_from_mcp.json  output_stdio.jsonl  patch.diff  pr119.diff  pr120.diff  pyproject.toml  remove_func.py  render.yaml  test_csv_input.json  test_csv_output.sh  test_csv_requests.jsonl  test_output.txt
.github/workflows/: rust.yml
.jules/: bolt.md  sentinel.md
benches/: csv_format.rs
docs/superpowers/plans/: 2026-03-14-agent-native-tool-architecture-plan.md
docs/superpowers/specs/: 2026-03-14-agent-native-tool-architecture-design.md
examples/: benchmark_json_parsing.rs  fetch_cpi.rs  verify_opendata.rs
opendata_mcp/: README.md  client.py  demo_usage.py  server.py
src/: data_helpers.rs  data_helpers.rs.~1~  handlers.rs  handlers.rs.~1~  lib.rs  lib.rs.~1~  models.rs  python.rs  security.rs  wrapper.rs
tests/: ckan_driver_test.rs  integration_tests.rs  security_test.rs  test_advanced_features.rs  test_fast_snippet_and_error.rs
