[package]
name = "statcan-rs"
version = "0.1.1"
edition = "2021"
description = "A Rust client and Model Context Protocol (MCP) Server for the Statistics Canada API."
license = "MIT"
keywords = ["mcp", "statcan", "statistics", "canada", "ai"]
categories = ["api-bindings", "science"]
repository = "https://github.com/poche450/stat-can-rs"

[lib]
name = "statcan_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-polars"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
polars = { version = "0.38", features = ["lazy", "csv", "strings", "temporal", "dtype-date", "regex", "json", "sql", "is_in"] }
zip = "0.6"
thiserror = "1.0"
bytes = "1.5"
futures = "0.3"
chrono = "0.4"
encoding_rs = "0.8"
csv = "1.3"
# MCP Server Deps
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
regex = "1.11"
crossbeam-channel = "0.5" # For SSE channel
tower_governor = "0.4"
governor = "0.6"
postgrest = "1.6"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
async-stream = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
pyo3-polars = { version = "0.12.0", optional = true }
home = "=0.5.9"
getrandom = "=0.2.16"
ahash = "=0.8.11"
constant_time_eq = "0.4.2"
async-trait = "0.1.89"
strsim = "0.11.1"
http = "1.4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
tower = { version = "0.5.3", features = ["util"] }
criterion = "0.8.2"

[[bench]]
name = "csv_format"
harness = false
