[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "statcan_rs"
version = "0.1.0"
description = "High-performance StatCan API client in Rust"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "polars>=0.20.0",
]

[tool.maturin]
features = ["python"]
